# data-pipeline-ci-cd

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_all.sh  setup.cfg
.github/workflows/: ci.yml
data/: pipeline.db
data/raw/: sample_data.csv
scripts/: generate_sample_data.py  run_pipeline.py
src/data_pipeline/: __init__.py  cli.py  pipeline.py
src/data_pipeline_ci_cd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py
tests/unit/: test_pipeline.py
