[metadata]
name = data-pipeline-ci-cd
version = 0.1.0

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.11
install_requires = 
    pandas==2.2.0
    numpy==1.26.4
    sqlalchemy==2.0.28
    python-dotenv==1.0.1

[options.packages.find]
where = src

[options.extras_require]
dev = 
    pytest==8.0.0
    pytest-cov==4.1.0
    black==24.1.1
    ruff==0.2.1
    mypy==1.8.0
    pre-commit==3.6.0
